--- a/app/src/main/res/layout/layout_new_list_item.xml
+++ b/app/src/main/res/layout/layout_new_list_item.xml
@@ -5,15 +5,14 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="6dp"
     app:cardCornerRadius="6dp"
     app:cardElevation="4dp"
-    app:cardBackgroundColor="@color/lightYellow">
+    app:cardBackgroundColor="?attr/cardBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
 
         <TextView
             android:id="@+id/note_title"
@@ -27,7 +26,7 @@
             android:fontFamily="@font/avenir_medium"
             android:lines="1"
             android:text="Title"
-            android:textColor="@android:color/primary_text_light"
+            android:textColor="?attr/primaryTextColor"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toStartOf="@+id/note_timestamp"
@@ -54,10 +53,10 @@
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/darkYellow"
+            android:background="?attr/dividerColor"
             app:layout_constraintBottom_toTopOf="@+id/note_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,13 +67,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="Body"
             android:elegantTextHeight="true"
-            android:maxLines="7"
+            android:maxLines="9"
             android:textSize="14sp"
+            android:textColor="?attr/contentTextColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
