--- a/app/src/main/res/layout/layout_note_toolbar.xml
+++ b/app/src/main/res/layout/layout_note_toolbar.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorPrimary"
+    android:background="?attr/toolbarBackground"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:weightSum="100">
@@ -20,6 +20,7 @@
             android:layout_height="40dp"
             android:layout_centerInParent="true"
             android:background="?attr/selectableItemBackground"
+            android:tint="?attr/tintColor"
             android:src="@drawable/ic_arrow_back_black_24dp" />
     </RelativeLayout>
 
@@ -36,6 +37,7 @@
             android:layout_height="40dp"
             android:layout_centerInParent="true"
             android:background="?attr/selectableItemBackground"
+            android:tint="?attr/tintColor"
             android:src="@drawable/ic_check_black_24dp" />
     </RelativeLayout>
 
@@ -45,7 +47,9 @@
         android:layout_weight="85"
         android:id="@+id/note_text_title"
         android:text="Title of note"
-        android:textColor="@color/black"
+        android:lines="1"
+        android:ellipsize="end"
+        android:textColor="?attr/primaryTextColor"
         android:layout_marginStart="16dp"
         android:textSize="23sp"
         android:visibility="visible"/>
@@ -56,7 +60,10 @@
         android:layout_weight="85"
         android:id="@+id/note_edit_title"
         android:text="Title of note"
-        android:textColor="@color/black"
+        android:lines="1"
+        android:inputType="text|textCapSentences"
+        android:textCursorDrawable="@null"
+        android:textColor="?attr/primaryTextColor"
         android:layout_marginStart="16dp"
         android:textSize="23sp"
         android:visibility="gone"
