--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -26,8 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layoutAnimation="@anim/layout_animation"
+        android:layoutAnimation="@anim/recycler_layout_animation"
         android:padding="5dp"
+        app:stackFromEnd="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
