--- a/app/src/main/res/layout/layout_about_dialog.xml
+++ b/app/src/main/res/layout/layout_about_dialog.xml
@@ -34,6 +34,13 @@
             android:layout_marginBottom="16dp"
             android:background="?attr/primaryTextColor" />
 
+        <ImageView
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:src="@drawable/atri_pic"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="8dp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
