--- a/app/src/main/res/anim/recycler_item_anim.xml
+++ b/app/src/main/res/anim/recycler_item_anim.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright 2019 Atri Tripathi. All rights reserved.
+  -->
+
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="@android:integer/config_longAnimTime">
 
