--- a/app/src/main/res/anim/recycler_layout_animation.xml
+++ b/app/src/main/res/anim/recycler_layout_animation.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2019 Atri Tripathi. All rights reserved.
+  -->
+
 <layoutAnimation
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:animation="@anim/recycler_item_anim"
